Evaluation saves ranking results

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ project/collection/rcv1_full.json
 project/collection/rcv1.json
 project/whoosh/*
 project/collection/rcv1_sub.json
+project/ranking_results/*
