--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ project/retrieval_results/*
 *-checkpoint.ipynb
 project/collection/rcv1_test.json
 project/collection/rcv1_train.json
+project/classification_results/*
