skip indexing in p1

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ project/retrieval_results/*
 project/collection/rcv1_test.json
 project/collection/rcv1_train.json
 project/classification_results/*
+project/reranking_results/*
